--- a/index.css
+++ b/index.css
@@ -1,6 +1,9 @@
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
     html{
         background-color: #fff;
         font-size: 20px;
+        font-family: 'Roboto', sans-serif;
     }
 
     body{
@@ -36,6 +39,10 @@
     .col{
         float: left;
         width: 50%;
+    }
+
+    .col h2{
+        font-size: 25px;
     }
 
     #col-1{
@@ -169,7 +176,7 @@
     }
 
     footer{
-        background: rgb(255, 0, 0);
+        background: rgb(224, 0, 0);
         margin-top: 15px;
         height: 100px;
     }
@@ -201,11 +208,17 @@
         /* border-radius: 50%; */
         margin: 0;
         padding: 5px;
+        color: #fff;
         /* background: #fff; */
     }
 
+    .social h2{
+        font-size: 25px;
+        color: #fff;
+    }
+
     .social-links a:hover{
-        color: rgb(255, 255, 255);
+        color: rgb(0, 0, 0);
         /* background: rgb(255, 150, 150); */
         /* border: 1px solid #fff; */
         transition: 0.5s;
@@ -224,7 +237,7 @@
     }
 
     .contact a:hover{
-        color: #fff;
+        color: rgb(224, 0, 0);
     }
     
     #copyright{
